--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -390,9 +390,9 @@ figcaption
   background-image: url('../assets/curso/tema1/icon2.svg')
   background-size: contain
   background-repeat: no-repeat
-  width: 10px
-  height: 9px
-  left: 0
+  width: 11px
+  height: 11px
+  left: 3px
   top: 100%
   transform: translateY(-50%)
 
@@ -470,9 +470,6 @@ figcaption
   td
     padding: 8px 10px
 
-
-
-
 .barra-avance span 
     color: white !important
 
@@ -545,3 +542,17 @@ figcaption
 .h-152 
   height: 152px
 
+.shadow-card
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2)
+  border-radius: 8px
+  background: #fff
+
+.m-l10
+  margin-left: 8px
+
+img.tim 
+  height: 183px
+
+@media (max-width: 768px)
+  img.tim 
+    height: 100px
