--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -48,6 +48,9 @@ figcaption
     background-repeat: no-repeat
     background-size: cover
     margin-inline: -3.2rem !important
+    margin-bottom: -48px
+    @media screen and (max-width: $bp-max-sm)
+      margin-bottom: -24px
   &-2
     background-color: #064124
   &-3
@@ -106,7 +109,8 @@ figcaption
   &-20
     background-image: url(../assets/curso/tema2/bg1.png)
     background-repeat: no-repeat
-    background-size: cover
+    background-size: contain
+    background-position: center
     margin-inline: -3.2rem !important
   &-21
     background-image: url(../assets/curso/tema2/bg2.png)
