--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -104,6 +104,9 @@ figcaption
     background-repeat: no-repeat
     background-size: cover
     margin-inline: -3.2rem !important
+    margin-bottom: -48px
+    @media screen and (max-width: $bp-max-sm)
+      margin-bottom: -24px
   &-19
     background-color: #D5D2CD
   &-20
